--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ export(contrasts_correlations)
 export(convert_continuous_to_discrete)
 export(descendant_species)
 export(eol_data)
+export(eol_traits)
+export(eol_traits2)
 export(fishbase_genus_query)
 export(fishbase_species_query)
 export(gbif_species_query)
@@ -24,6 +26,7 @@ export(locality_add_habitat_biome)
 export(locality_clean)
 export(match_data)
 export(pbdb_taxon_query)
+export(plot_gis)
 export(render_chapter2)
 export(run_biogeobears)
 export(run_chapter2)
