--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,12 +15,14 @@ export(fishbase_genus_query)
 export(fishbase_species_query)
 export(gbif_species_query)
 export(gbif_taxon_query)
+export(get_combie_image_summary)
 export(get_datelife_biggest)
 export(get_eol)
 export(get_genbank_count)
 export(get_location_realm_biome)
 export(get_otol)
 export(get_pubmed)
+export(get_wikipedia_pics)
 export(get_wikipedia_summary)
 export(locality_add_habitat_biome)
 export(locality_clean)
@@ -28,6 +30,7 @@ export(match_data)
 export(pbdb_taxon_query)
 export(plot_gis)
 export(render_chapter2)
+export(render_quarto)
 export(run_biogeobears)
 export(run_chapter2)
 export(species_get_biogeographic_data)
