adding misse to workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(aggregate_category)
 export(check_continuous)
 export(contrasts_correlations)
 export(convert_continuous_to_discrete)
-export(descendant_species)
 export(eol_data)
 export(eol_traits)
 export(eol_traits2)
@@ -13,9 +12,12 @@ export(fishbase_species_query)
 export(gbif_species_query)
 export(gbif_taxon_query)
 export(get_combie_image_summary)
+export(get_datelife_all)
 export(get_datelife_biggest)
+export(get_descendant_species)
 export(get_eol)
 export(get_genbank_count)
+export(get_genbank_count_by_gene)
 export(get_location_realm_biome)
 export(get_otol)
 export(get_pubmed)
@@ -29,8 +31,10 @@ export(phydo_convert_to_Beaulieu_data)
 export(phydo_drop_type)
 export(phydo_fitGeiger)
 export(plot_gis)
+export(reconstruct_apomorphy)
 export(render_phydo)
 export(render_quarto)
 export(run_biogeobears)
+export(run_misse)
 export(run_phydo)
 export(spocc_taxon_query)
