updating with info parsing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(get_genbank_count_by_gene)
 export(get_location_realm_biome)
 export(get_otol)
 export(get_pubmed)
+export(get_pubmed_count_only)
+export(get_pubmed_info_on_OTOL)
 export(get_wikipedia_pics)
 export(get_wikipedia_summary)
 export(locality_add_habitat_biome)
@@ -31,9 +33,11 @@ export(phydo_convert_to_Beaulieu_data)
 export(phydo_drop_type)
 export(phydo_fitGeiger)
 export(plot_gis)
+export(plot_pubmed_info_on_OTOL)
 export(reconstruct_apomorphy)
 export(render_phydo)
 export(render_quarto)
+export(reroot.tree)
 export(run_biogeobears)
 export(run_misse)
 export(run_phydo)
