--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,15 +35,15 @@ Imports:
     rotl,
 	rvest,
 	sf,
-    sp,
-    spocc,
+	sp,
     taxize,
 	tidyverse,
-    utils
+    utils,
+	dplyr
 Suggests:
     testthat (>= 2.1.0)
 Remotes:
     phylotastic/datelife
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
