updating with targets

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     taxize,
 	tidyverse,
     utils,
+	targets,
 	dplyr
 Suggests:
     testthat (>= 2.1.0)
@@ -46,4 +47,4 @@ Remotes:
     phylotastic/datelife
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
